[package]
name = "fibheap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"

[[bench]]
name = "perf"
harness = false
